modules/vpc/3-subnets.tf

# Create private subnets

resource "aws_subnet" "private" {
  count = length(var.private_subnets)
  vpc_id = aws_vpc.this.id
  cidr_block = var.private_subnets[count.index]
  tags = merge(
    {Name = "${var.env}-private-${var.azs[count.index]}" },
    var.private_subnet_tags
  )
}

# Create public subnets

resource "aws_subnet" "public" {
  count = length(var.public_subnets)
  vpc_id = aws_vpc.this.id
  cidr_block = var.public_subnets[count.index]
  tags = merge(
    {Name = "${var.env}-public-${var.azs[count.index]}" },
    var.public_subnet_tags
  )
}
